Update generate_preset_pass_manager imports in guides

--- a/docs/guides/build-noise-models.ipynb
+++ b/docs/guides/build-noise-models.ipynb
@@ -64,7 +64,7 @@
     "from qiskit import QuantumCircuit\n",
     "from qiskit.quantum_info import Kraus, SuperOp\n",
     "from qiskit.visualization import plot_histogram\n",
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
     "from qiskit_aer import AerSimulator\n",
     "\n",
     "# Import from Qiskit Aer noise module\n",
@@ -192,22 +192,22 @@
      "text": [
       "QuantumError on 1 qubits. Noise circuits:\n",
       "  P(0) = 0.05, Circuit = \n",
-      "   ┌───┐\n",
-      "q: ┤ X ├\n",
-      "   └───┘\n",
+      "   \u250c\u2500\u2500\u2500\u2510\n",
+      "q: \u2524 X \u251c\n",
+      "   \u2514\u2500\u2500\u2500\u2518\n",
       "  P(1) = 0.95, Circuit = \n",
-      "   ┌───┐\n",
-      "q: ┤ I ├\n",
-      "   └───┘\n",
+      "   \u250c\u2500\u2500\u2500\u2510\n",
+      "q: \u2524 I \u251c\n",
+      "   \u2514\u2500\u2500\u2500\u2518\n",
       "QuantumError on 1 qubits. Noise circuits:\n",
       "  P(0) = 0.05, Circuit = \n",
-      "   ┌───┐\n",
-      "q: ┤ Z ├\n",
-      "   └───┘\n",
+      "   \u250c\u2500\u2500\u2500\u2510\n",
+      "q: \u2524 Z \u251c\n",
+      "   \u2514\u2500\u2500\u2500\u2518\n",
       "  P(1) = 0.95, Circuit = \n",
-      "   ┌───┐\n",
-      "q: ┤ I ├\n",
-      "   └───┘\n"
+      "   \u250c\u2500\u2500\u2500\u2510\n",
+      "q: \u2524 I \u251c\n",
+      "   \u2514\u2500\u2500\u2500\u2518\n"
      ]
     }
    ],
@@ -237,21 +237,21 @@
      "text": [
       "QuantumError on 1 qubits. Noise circuits:\n",
       "  P(0) = 0.0025000000000000005, Circuit = \n",
-      "   ┌───┐┌───┐\n",
-      "q: ┤ X ├┤ Z ├\n",
-      "   └───┘└───┘\n",
+      "   \u250c\u2500\u2500\u2500\u2510\u250c\u2500\u2500\u2500\u2510\n",
+      "q: \u2524 X \u251c\u2524 Z \u251c\n",
+      "   \u2514\u2500\u2500\u2500\u2518\u2514\u2500\u2500\u2500\u2518\n",
       "  P(1) = 0.0475, Circuit = \n",
-      "   ┌───┐┌───┐\n",
-      "q: ┤ X ├┤ I ├\n",
-      "   └───┘└───┘\n",
+      "   \u250c\u2500\u2500\u2500\u2510\u250c\u2500\u2500\u2500\u2510\n",
+      "q: \u2524 X \u251c\u2524 I \u251c\n",
+      "   \u2514\u2500\u2500\u2500\u2518\u2514\u2500\u2500\u2500\u2518\n",
       "  P(2) = 0.0475, Circuit = \n",
-      "   ┌───┐┌───┐\n",
-      "q: ┤ I ├┤ Z ├\n",
-      "   └───┘└───┘\n",
+      "   \u250c\u2500\u2500\u2500\u2510\u250c\u2500\u2500\u2500\u2510\n",
+      "q: \u2524 I \u251c\u2524 Z \u251c\n",
+      "   \u2514\u2500\u2500\u2500\u2518\u2514\u2500\u2500\u2500\u2518\n",
       "  P(3) = 0.9025, Circuit = \n",
-      "   ┌───┐┌───┐\n",
-      "q: ┤ I ├┤ I ├\n",
-      "   └───┘└───┘\n"
+      "   \u250c\u2500\u2500\u2500\u2510\u250c\u2500\u2500\u2500\u2510\n",
+      "q: \u2524 I \u251c\u2524 I \u251c\n",
+      "   \u2514\u2500\u2500\u2500\u2518\u2514\u2500\u2500\u2500\u2518\n"
      ]
     }
    ],
@@ -278,29 +278,29 @@
      "text": [
       "QuantumError on 2 qubits. Noise circuits:\n",
       "  P(0) = 0.0025000000000000005, Circuit = \n",
-      "     ┌───┐\n",
-      "q_0: ┤ X ├\n",
-      "     ├───┤\n",
-      "q_1: ┤ Z ├\n",
-      "     └───┘\n",
+      "     \u250c\u2500\u2500\u2500\u2510\n",
+      "q_0: \u2524 X \u251c\n",
+      "     \u251c\u2500\u2500\u2500\u2524\n",
+      "q_1: \u2524 Z \u251c\n",
+      "     \u2514\u2500\u2500\u2500\u2518\n",
       "  P(1) = 0.0475, Circuit = \n",
-      "     ┌───┐\n",
-      "q_0: ┤ I ├\n",
-      "     ├───┤\n",
-      "q_1: ┤ Z ├\n",
-      "     └───┘\n",
+      "     \u250c\u2500\u2500\u2500\u2510\n",
+      "q_0: \u2524 I \u251c\n",
+      "     \u251c\u2500\u2500\u2500\u2524\n",
+      "q_1: \u2524 Z \u251c\n",
+      "     \u2514\u2500\u2500\u2500\u2518\n",
       "  P(2) = 0.0475, Circuit = \n",
-      "     ┌───┐\n",
-      "q_0: ┤ X ├\n",
-      "     ├───┤\n",
-      "q_1: ┤ I ├\n",
-      "     └───┘\n",
+      "     \u250c\u2500\u2500\u2500\u2510\n",
+      "q_0: \u2524 X \u251c\n",
+      "     \u251c\u2500\u2500\u2500\u2524\n",
+      "q_1: \u2524 I \u251c\n",
+      "     \u2514\u2500\u2500\u2500\u2518\n",
       "  P(3) = 0.9025, Circuit = \n",
-      "     ┌───┐\n",
-      "q_0: ┤ I ├\n",
-      "     ├───┤\n",
-      "q_1: ┤ I ├\n",
-      "     └───┘\n"
+      "     \u250c\u2500\u2500\u2500\u2510\n",
+      "q_0: \u2524 I \u251c\n",
+      "     \u251c\u2500\u2500\u2500\u2524\n",
+      "q_1: \u2524 I \u251c\n",
+      "     \u2514\u2500\u2500\u2500\u2518\n"
      ]
     }
    ],
@@ -398,9 +398,9 @@
      "text": [
       "QuantumError on 1 qubits. Noise circuits:\n",
       "  P(0) = 1.0, Circuit = \n",
-      "   ┌───────┐\n",
-      "q: ┤ kraus ├\n",
-      "   └───────┘\n"
+      "   \u250c\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2510\n",
+      "q: \u2524 kraus \u251c\n",
+      "   \u2514\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2518\n"
      ]
     },
     {
@@ -642,16 +642,16 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "        ┌───┐                ░ ┌─┐         \n",
-      "   q_0: ┤ H ├──■─────────────░─┤M├─────────\n",
-      "        └───┘┌─┴─┐           ░ └╥┘┌─┐      \n",
-      "   q_1: ─────┤ X ├──■────────░──╫─┤M├──────\n",
-      "             └───┘┌─┴─┐      ░  ║ └╥┘┌─┐   \n",
-      "   q_2: ──────────┤ X ├──■───░──╫──╫─┤M├───\n",
-      "                  └───┘┌─┴─┐ ░  ║  ║ └╥┘┌─┐\n",
-      "   q_3: ───────────────┤ X ├─░──╫──╫──╫─┤M├\n",
-      "                       └───┘ ░  ║  ║  ║ └╥┘\n",
-      "meas: 4/════════════════════════╩══╩══╩══╩═\n",
+      "        \u250c\u2500\u2500\u2500\u2510                \u2591 \u250c\u2500\u2510         \n",
+      "   q_0: \u2524 H \u251c\u2500\u2500\u25a0\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2591\u2500\u2524M\u251c\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\n",
+      "        \u2514\u2500\u2500\u2500\u2518\u250c\u2500\u2534\u2500\u2510           \u2591 \u2514\u2565\u2518\u250c\u2500\u2510      \n",
+      "   q_1: \u2500\u2500\u2500\u2500\u2500\u2524 X \u251c\u2500\u2500\u25a0\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2591\u2500\u2500\u256b\u2500\u2524M\u251c\u2500\u2500\u2500\u2500\u2500\u2500\n",
+      "             \u2514\u2500\u2500\u2500\u2518\u250c\u2500\u2534\u2500\u2510      \u2591  \u2551 \u2514\u2565\u2518\u250c\u2500\u2510   \n",
+      "   q_2: \u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2524 X \u251c\u2500\u2500\u25a0\u2500\u2500\u2500\u2591\u2500\u2500\u256b\u2500\u2500\u256b\u2500\u2524M\u251c\u2500\u2500\u2500\n",
+      "                  \u2514\u2500\u2500\u2500\u2518\u250c\u2500\u2534\u2500\u2510 \u2591  \u2551  \u2551 \u2514\u2565\u2518\u250c\u2500\u2510\n",
+      "   q_3: \u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2500\u2524 X \u251c\u2500\u2591\u2500\u2500\u256b\u2500\u2500\u256b\u2500\u2500\u256b\u2500\u2524M\u251c\n",
+      "                       \u2514\u2500\u2500\u2500\u2518 \u2591  \u2551  \u2551  \u2551 \u2514\u2565\u2518\n",
+      "meas: 4/\u2550\u2550\u2550\u2550\u2550\u2550\u2550\u2550\u2550\u2550\u2550\u2550\u2550\u2550\u2550\u2550\u2550\u2550\u2550\u2550\u2550\u2550\u2550\u2550\u2569\u2550\u2550\u2569\u2550\u2550\u2569\u2550\u2550\u2569\u2550\n",
       "                                0  1  2  3 \n"
      ]
     }
