--- a/docs/guides/common-parameters.ipynb
+++ b/docs/guides/common-parameters.ipynb
@@ -67,7 +67,7 @@
     "from qiskit import QuantumCircuit, QuantumRegister\n",
     "from qiskit.circuit.library import UnitaryGate\n",
     "from qiskit.quantum_info import random_unitary\n",
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
     "\n",
     "UU = random_unitary(4, seed=12345)\n",
     "rand_U = UnitaryGate(UU)\n",
