--- a/docs/guides/fractional-gates.ipynb
+++ b/docs/guides/fractional-gates.ipynb
@@ -63,7 +63,7 @@
    "source": [
     "from qiskit import QuantumCircuit\n",
     "from qiskit.circuit import Parameter\n",
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
     "from qiskit.visualization.timeline import draw as draw_timeline, IQXSimple\n",
     "\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
@@ -224,7 +224,7 @@
    ],
    "source": [
     "qc = QuantumCircuit(1)\n",
-    "param = Parameter(\"θ\")\n",
+    "param = Parameter(\"\u03b8\")\n",
     "qc.rx(param, 0)\n",
     "qc.draw(\"mpl\")"
    ]
@@ -250,7 +250,7 @@
     }
    ],
    "source": [
-    "# Decomposition of an RX(θ) gate using the IBM Quantum QPU basis\n",
+    "# Decomposition of an RX(\u03b8) gate using the IBM Quantum QPU basis\n",
     "service = QiskitRuntimeService()\n",
     "backend = service.backend(\"ibm_torino\")\n",
     "optimization_level = 3\n",
@@ -282,12 +282,12 @@
    "source": [
     "from qiskit import QuantumCircuit\n",
     "from qiskit.circuit import Parameter\n",
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
     "\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
     "qc = QuantumCircuit(2)\n",
-    "param = Parameter(\"θ\")\n",
+    "param = Parameter(\"\u03b8\")\n",
     "qc.rzz(param, 0, 1)\n",
     "qc.draw(\"mpl\")"
    ]
@@ -313,7 +313,7 @@
     }
    ],
    "source": [
-    "# Decomposition of an RZZ(θ) gate using the IBM Quantum QPU basis\n",
+    "# Decomposition of an RZZ(\u03b8) gate using the IBM Quantum QPU basis\n",
     "service = QiskitRuntimeService()\n",
     "backend = service.backend(\"ibm_torino\")\n",
     "optimization_level = 3\n",
