--- a/docs/guides/qiskit-addons-obp-get-started.ipynb
+++ b/docs/guides/qiskit-addons-obp-get-started.ipynb
@@ -49,7 +49,7 @@
     "import numpy as np\n",
     "from qiskit.transpiler import CouplingMap\n",
     "from qiskit.synthesis import LieTrotter\n",
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService, EstimatorV2\n",
     "from qiskit_ibm_runtime.fake_provider import FakeMelbourneV2\n",
     "from qiskit.primitives import StatevectorEstimator\n",
