--- a/docs/guides/serverless-first-program.ipynb
+++ b/docs/guides/serverless-first-program.ipynb
@@ -115,7 +115,7 @@
    "source": [
     "%%writefile ./source_files/transpile_remote.py\n",
     "\n",
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
     "\n",
     "def transpile_remote(circuit, optimization_level, backend):\n",
     "    \"\"\"Transpiles an abstract circuit into an ISA circuit for a given backend.\"\"\"\n",
@@ -134,14 +134,14 @@
    "source": [
     "## Set up your files\n",
     "\n",
-    "Qiskit Serverless requires setting up your workload’s `.py` files into a dedicated directory. The following structure is an example of good practice:\n",
+    "Qiskit Serverless requires setting up your workload\u2019s `.py` files into a dedicated directory. The following structure is an example of good practice:\n",
     "\n",
     "```text\n",
     "serverless_program\n",
-    "├── program_uploader.ipynb\n",
-    "└── source_files\n",
-    "    ├── transpile_remote.py\n",
-    "    └── *.py\n",
+    "\u251c\u2500\u2500 program_uploader.ipynb\n",
+    "\u2514\u2500\u2500 source_files\n",
+    "    \u251c\u2500\u2500 transpile_remote.py\n",
+    "    \u2514\u2500\u2500 *.py\n",
     "```\n",
     "\n",
     "Serverless uploads the contents of `source_files` to run remotely. Once these are set up, you can adjust `transpile_remote.py` to fetch inputs and return outputs.\n",
