--- a/docs/guides/simulate-with-qiskit-sdk-primitives.mdx
+++ b/docs/guides/simulate-with-qiskit-sdk-primitives.mdx
@@ -55,7 +55,7 @@ parameter_values = [[0], [np.pi/6], [np.pi/2]]
 
   ```python
   # Generate a pass manager without providing a backend
-  from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
+  from qiskit.transpiler import generate_preset_pass_manager
 
   pm = generate_preset_pass_manager(optimization_level=1)
   isa_circuit = pm.run(qc)
@@ -150,7 +150,7 @@ Any quantum circuit passed to a Sampler **must** include measurements.
 
   ```python
   # Generate a pass manager without providing a backend
-  from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
+  from qiskit.transpiler import generate_preset_pass_manager
 
   pm = generate_preset_pass_manager(optimization_level=1)
   isa_circuit = pm.run(qc)
@@ -183,7 +183,7 @@ print(f" > Result class: {type(pub_result)}")
 Primitives accept multiple PUBs as inputs, and each PUB gets its own result. Therefore, you can run different circuits with various parameter/observable combinations, and retrieve the PUB results:
 
 ```python
-from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
+from qiskit.transpiler import generate_preset_pass_manager
 
 # create two circuits
 circuit1 = qc.copy()
