--- a/docs/guides/dynamical-decoupling-pass-manager.ipynb
+++ b/docs/guides/dynamical-decoupling-pass-manager.ipynb
@@ -89,7 +89,7 @@
     }
    ],
    "source": [
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
     "from qiskit.circuit.library import EfficientSU2\n",
     "\n",
     "qc = EfficientSU2(12, entanglement=\"circular\", reps=1)\n",
