--- a/docs/guides/get-started-with-primitives.ipynb
+++ b/docs/guides/get-started-with-primitives.ipynb
@@ -143,7 +143,7 @@
     }
    ],
    "source": [
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
     "\n",
     "pm = generate_preset_pass_manager(optimization_level=1, backend=backend)\n",
     "isa_circuit = pm.run(circuit)\n",
@@ -312,7 +312,7 @@
     }
    ],
    "source": [
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
     "\n",
     "pm = generate_preset_pass_manager(optimization_level=1, backend=backend)\n",
     "isa_circuit = pm.run(circuit)\n",
