--- a/docs/guides/noise-learning.ipynb
+++ b/docs/guides/noise-learning.ipynb
@@ -62,7 +62,7 @@
    "source": [
     "from qiskit import QuantumCircuit\n",
     "from qiskit.transpiler import CouplingMap\n",
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
     "\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService, EstimatorV2\n",
     "from qiskit_ibm_runtime.noise_learner import NoiseLearner\n",
