--- a/docs/guides/primitives-examples.ipynb
+++ b/docs/guides/primitives-examples.ipynb
@@ -40,7 +40,7 @@
    "source": [
     "import numpy as np\n",
     "from qiskit.circuit.library import IQP\n",
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
     "from qiskit.quantum_info import SparsePauliOp, random_hermitian\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService, EstimatorV2 as Estimator\n",
     "\n",
@@ -99,7 +99,7 @@
    "source": [
     "import numpy as np\n",
     "from qiskit.circuit.library import IQP\n",
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
     "from qiskit.quantum_info import SparsePauliOp, random_hermitian\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService, EstimatorV2 as Estimator\n",
     "\n",
@@ -208,14 +208,14 @@
     "\n",
     "from qiskit.circuit import QuantumCircuit, Parameter\n",
     "from qiskit.quantum_info import SparsePauliOp\n",
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService, EstimatorV2 as Estimator\n",
     "\n",
     "service = QiskitRuntimeService()\n",
     "backend = service.least_busy(operational=True, simulator=False)\n",
     "\n",
     "# Step 1: Map classical inputs to a quantum problem\n",
-    "theta = Parameter(\"θ\")\n",
+    "theta = Parameter(\"\u03b8\")\n",
     "\n",
     "chsh_circuit = QuantumCircuit(2)\n",
     "chsh_circuit.h(0)\n",
@@ -291,7 +291,7 @@
    "source": [
     "import numpy as np\n",
     "from qiskit.circuit.library import IQP\n",
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
     "from qiskit.quantum_info import SparsePauliOp, random_hermitian\n",
     "from qiskit_ibm_runtime import (\n",
     "    QiskitRuntimeService,\n",
@@ -351,7 +351,7 @@
     "<span id=\"sampler-examples\"></span>\n",
     "## Sampler examples\n",
     "\n",
-    "Generate entire error-mitigated quasi-probability distributions sampled from quantum circuit outputs. Leverage Sampler’s capabilities for search and classification algorithms like Grover’s and QVSM.\n",
+    "Generate entire error-mitigated quasi-probability distributions sampled from quantum circuit outputs. Leverage Sampler\u2019s capabilities for search and classification algorithms like Grover\u2019s and QVSM.\n",
     "\n",
     "### Run a single experiment\n",
     "\n",
@@ -377,7 +377,7 @@
    "source": [
     "import numpy as np\n",
     "from qiskit.circuit.library import IQP\n",
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
     "from qiskit.quantum_info import random_hermitian\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService, SamplerV2 as Sampler\n",
     "\n",
@@ -434,7 +434,7 @@
    "source": [
     "import numpy as np\n",
     "from qiskit.circuit.library import IQP\n",
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
     "from qiskit.quantum_info import random_hermitian\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService, SamplerV2 as Sampler\n",
     "\n",
@@ -491,7 +491,7 @@
    "source": [
     "import numpy as np\n",
     "from qiskit.circuit.library import RealAmplitudes\n",
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService, SamplerV2 as Sampler\n",
     "\n",
     "n_qubits = 127\n",
@@ -564,7 +564,7 @@
     "import numpy as np\n",
     "from qiskit.circuit.library import IQP\n",
     "from qiskit.quantum_info import random_hermitian\n",
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
     "from qiskit_ibm_runtime import Session, SamplerV2 as Sampler\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
