--- a/docs/guides/pulse.ipynb
+++ b/docs/guides/pulse.ipynb
@@ -259,8 +259,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Instruction(name='rz', num_qubits=1, num_clbits=0, params=[Parameter(λ)]) (0,)\n",
-      "Instruction(name='rz', num_qubits=1, num_clbits=0, params=[Parameter(λ)]) (1,)\n",
+      "Instruction(name='rz', num_qubits=1, num_clbits=0, params=[Parameter(\u03bb)]) (0,)\n",
+      "Instruction(name='rz', num_qubits=1, num_clbits=0, params=[Parameter(\u03bb)]) (1,)\n",
       "Instruction(name='cx', num_qubits=2, num_clbits=0, params=[]) (0, 1)\n",
       "Instruction(name='cx', num_qubits=2, num_clbits=0, params=[]) (1, 0)\n",
       "Instruction(name='measure', num_qubits=1, num_clbits=1, params=[]) (0,)\n",
@@ -293,7 +293,7 @@
    ],
    "source": [
     "from qiskit_ibm_runtime.fake_provider import FakeHanoiV2\n",
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
     "\n",
     "backend = FakeHanoiV2()\n",
     "passmanager = generate_preset_pass_manager(\n",
