--- a/docs/guides/represent-quantum-computers.ipynb
+++ b/docs/guides/represent-quantum-computers.ipynb
@@ -142,7 +142,7 @@
     }
    ],
    "source": [
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
     "\n",
     "pass_manager = generate_preset_pass_manager(\n",
     "    optimization_level=1, target=target, seed_transpiler=12345\n",
@@ -171,7 +171,7 @@
     "The qubits from our abstract circuits are called _virtual qubits_ and those on the coupling map are _physical qubits_. The transpiler provides a mapping between virtual and physical qubits. One of the first steps in transpilation, the _layout_ stage, performs this mapping.\n",
     "\n",
     "<Admonition type=\"note\">\n",
-    "Although the routing stage is intertwined with the _layout_ stage — which selects the actual qubits — by default, this topic treats them as separate stages for simplicity. The combination of routing and layout is called _qubit mapping_.  Learn more about these stages in the [Transpiler stages](transpiler-stages) topic.\n",
+    "Although the routing stage is intertwined with the _layout_ stage \u2014 which selects the actual qubits \u2014 by default, this topic treats them as separate stages for simplicity. The combination of routing and layout is called _qubit mapping_.  Learn more about these stages in the [Transpiler stages](transpiler-stages) topic.\n",
     "</Admonition>\n",
     "\n",
     "Pass the `coupling_map` keyword argument to see its effect on the transpiler:"
