--- a/docs/guides/set-optimization.ipynb
+++ b/docs/guides/set-optimization.ipynb
@@ -157,7 +157,7 @@
     }
    ],
    "source": [
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
     "from qiskit_ibm_runtime.fake_provider import FakeSherbrooke\n",
     "\n",
     "backend = FakeSherbrooke()\n",
@@ -200,7 +200,7 @@
     }
    ],
    "source": [
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
     "from qiskit_ibm_runtime.fake_provider import FakeSherbrooke\n",
     "\n",
     "backend = FakeSherbrooke()\n",
