--- a/docs/guides/simulate-with-qiskit-aer.ipynb
+++ b/docs/guides/simulate-with-qiskit-aer.ipynb
@@ -100,7 +100,7 @@
    ],
    "source": [
     "from qiskit.quantum_info import SparsePauliOp\n",
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
     "from qiskit_aer import AerSimulator\n",
     "from qiskit_aer.primitives import EstimatorV2 as Estimator\n",
     "\n",
