--- a/docs/guides/transpiler-plugins.ipynb
+++ b/docs/guides/transpiler-plugins.ipynb
@@ -285,7 +285,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
     "service = QiskitRuntimeService()\n",
