Generate Qiskit 1.4.2 and 2.0.0rc2

--- a/docs/api/qiskit/dev/qiskit.circuit.library.RGate.mdx
+++ b/docs/api/qiskit/dev/qiskit.circuit.library.RGate.mdx
@@ -121,7 +121,7 @@ $$
   ### inverse
 
   <Function id="qiskit.circuit.library.RGate.inverse" github="https://github.com/Qiskit/qiskit/tree/stable/2.0/qiskit/circuit/library/standard_gates/r.py#L81-L93" signature="inverse(annotated=False)">
-    Invert this gate as: $r(θ, φ)^dagger = r(-θ, φ)$
+    Invert this gate as: $R(θ, φ)^{\dagger} = R(-θ, φ)$
 
     **Parameters**
 
