Update generate_preset_pass_manager imports in guides

--- a/docs/guides/get-started-with-primitives.ipynb
+++ b/docs/guides/get-started-with-primitives.ipynb
@@ -152,7 +152,7 @@
     }
    ],
    "source": [
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
     "\n",
     "pm = generate_preset_pass_manager(optimization_level=1, backend=backend)\n",
     "isa_circuit = pm.run(circuit)\n",
@@ -321,7 +321,7 @@
     }
    ],
    "source": [
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
     "\n",
     "pm = generate_preset_pass_manager(optimization_level=1, backend=backend)\n",
     "isa_circuit = pm.run(circuit)\n",
