--- a/docs/guides/qiskit-addons-cutting-gates.ipynb
+++ b/docs/guides/qiskit-addons-cutting-gates.ipynb
@@ -54,7 +54,7 @@
     "import numpy as np\n",
     "from qiskit.circuit.library import efficient_su2\n",
     "from qiskit.quantum_info import SparsePauliOp\n",
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
     "from qiskit_ibm_runtime.fake_provider import FakeManilaV2\n",
     "from qiskit_ibm_runtime import SamplerV2, Batch\n",
     "from qiskit_aer.primitives import EstimatorV2\n",
