--- a/docs/guides/qiskit-code-assistant-jupyterlab.mdx
+++ b/docs/guides/qiskit-code-assistant-jupyterlab.mdx
@@ -86,7 +86,7 @@ To get a code suggestion, type a prompt, then type `Alt` + `.` or `Alt` + `\`.  
   - Enter partial code and get a suggestion to finish the code.  Example:
     ```python
     from qiskit.circuit import QuantumCircuit
-    from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
+    from qiskit.transpiler import generate_preset_pass_manager
     from qiskit_ibm_runtime import SamplerV2 as Sampler
     from qiskit_ibm_runtime.fake_provider import FakeManilaV2
 
