--- a/docs/guides/custom-backend.ipynb
+++ b/docs/guides/custom-backend.ipynb
@@ -378,7 +378,7 @@
     }
    ],
    "source": [
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
     "\n",
     "num_qubits = 50\n",
     "ghz = QuantumCircuit(num_qubits)\n",
