--- a/docs/guides/function-template-hamiltonian-simulation.ipynb
+++ b/docs/guides/function-template-hamiltonian-simulation.ipynb
@@ -66,7 +66,7 @@
     "\n",
     "First, write a function template for Hamiltonian simulation that uses the [AQC-Tensor Qiskit addon](https://docs.quantum.ibm.com/guides/qiskit-addons-aqc) to map the problem description to a reduced-depth circuit for execution on hardware.\n",
     "\n",
-    "Throughout, the code is saved to `./source_files/template_hamiltonian_simulation.py`. This file is the function template you can upload to and run remotely with Qiskit Serverless."
+    "Throughout, the code is saved to\u00a0`./source_files/template_hamiltonian_simulation.py`. This file is the function template you can upload to and run remotely with Qiskit Serverless."
    ]
   },
   {
@@ -460,7 +460,7 @@
     "%%writefile --append ./source_files/template_hamiltonian_simulation.py\n",
     "\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
     "\n",
     "service = QiskitRuntimeService()\n",
     "backend = service.backend(backend_name)\n",
@@ -1347,7 +1347,7 @@
     "    final_circuit.compose(remainder_circuit, inplace=True)\n",
     "\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
     "\n",
     "service = QiskitRuntimeService()\n",
     "backend = service.backend(backend_name)\n",
