--- a/docs/guides/local-testing-mode.ipynb
+++ b/docs/guides/local-testing-mode.ipynb
@@ -69,7 +69,7 @@
    "outputs": [],
    "source": [
     "from qiskit.circuit import QuantumCircuit\n",
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
     "from qiskit_ibm_runtime import SamplerV2 as Sampler\n",
     "from qiskit_ibm_runtime.fake_provider import FakeManilaV2\n",
     "\n",
@@ -110,7 +110,7 @@
    "source": [
     "from qiskit_aer import AerSimulator\n",
     "from qiskit.circuit import QuantumCircuit\n",
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
     "from qiskit_ibm_runtime import Session, SamplerV2 as Sampler\n",
     "\n",
     "# Bell Circuit\n",
@@ -148,7 +148,7 @@
    "source": [
     "from qiskit_aer import AerSimulator\n",
     "from qiskit.circuit import QuantumCircuit\n",
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
     "from qiskit_ibm_runtime import SamplerV2 as Sampler, QiskitRuntimeService\n",
     "\n",
     "# Bell Circuit\n",
