--- a/docs/guides/primitives-rest-api.mdx
+++ b/docs/guides/primitives-rest-api.mdx
@@ -333,7 +333,7 @@ import requests
 url = 'https://quantum.cloud.ibm.com/v1/jobs'
 auth_id = "Bearer <YOUR_BEARER_TOKEN>"
 crn = "<SERVICE-CRN>"
-backend = "BACKEND_NAME"
+backend = "<BACKEND_NAME>"
 
 headers = {
     'Content-Type': 'application/json',
@@ -381,7 +381,7 @@ import requests
 url = 'https://quantum.cloud.ibm.com/v1/jobs'
 auth_id = "Bearer <YOUR_BEARER_TOKEN>"
 crn = "<SERVICE-CRN>"
-backend = "BACKEND_NAME"
+backend = "<BACKEND_NAME>"
 
 headers = {
     'Content-Type': 'application/json',
@@ -427,7 +427,7 @@ import requests
 url = 'https://quantum.cloud.ibm.com/v1/jobs'
 auth_id = "Bearer <YOUR_BEARER_TOKEN>"
 crn = "<SERVICE-CRN>"
-backend = "BACKEND_NAME"
+backend = "<BACKEND_NAME>"
 
 headers = {
     'Content-Type': 'application/json',
@@ -823,7 +823,7 @@ Find details on how to initialize your account, view available backends, and inv
 import requests
 import qiskit_ibm_runtime
 from qiskit_ibm_runtime import QiskitRuntimeService
-from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
+from qiskit.transpiler import generate_preset_pass_manager
 from qiskit.qasm3 import dumps
 from qiskit import QuantumCircuit
 from qiskit.circuit import Parameter
