--- a/docs/guides/serverless-port-code.mdx
+++ b/docs/guides/serverless-port-code.mdx
@@ -26,7 +26,7 @@ The following code assumes that you have saved your credentials. If you have not
 <Tabs>
   <TabItem value="LocalExperiment" label="Local Experiment">
 ```python
-from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
+from qiskit.transpiler import generate_preset_pass_manager
 from qiskit_ibm_runtime import QiskitRuntimeService
 from qiskit.circuit.random import random_circuit
 
@@ -61,7 +61,7 @@ print(transpiled_circuits)
     ```python
 # transpile_remote.py
 
-from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
+from qiskit.transpiler import generate_preset_pass_manager
 from qiskit_serverless import get_arguments, save_result, distribute_task, get
 from qiskit_ibm_runtime import QiskitRuntimeService
 
@@ -117,7 +117,7 @@ except Exception as e:
 <Tabs>
   <TabItem value="LocalExperiment" label="Local Experiment">
 ```python
-from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
+from qiskit.transpiler import generate_preset_pass_manager
 from qiskit_ibm_runtime import QiskitRuntimeService
 from qiskit.circuit.random import random_circuit
 
@@ -152,7 +152,7 @@ print(transpiled_circuits)
     ```python
 # transpile_remote.py
 
-from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager
+from qiskit.transpiler import generate_preset_pass_manager
 from qiskit_serverless import get_arguments, save_result, distribute_task, get
 from qiskit_ibm_runtime import QiskitRuntimeService
 
