--- a/docs/guides/job-limits.mdx
+++ b/docs/guides/job-limits.mdx
@@ -14,6 +14,28 @@ At most, **10 million** executions are allowed.  The number of executions is the
 
 For example, if you have a PUB with one circuit, observables with shape (1, 6), and parameters with shape (4, 1), this would render $4 \times 6 = 24$ circuits (or fewer, if some observables commute). If you requested 2,000 shots, then the total number of executions is $24 \times 2,000 = 48,000$.
 
+<span id="per-qubit"></span>
+## Maximum number of low-level instructions per qubit
+
+The service permits up to **26.8 million control-system instructions per qubit**. This ensures that the user circuits fit within the control system's instruction memory.  The following table describes how the system translates instruction set architecture (ISA) circuit instructions to control system instructions when calculating this limit.
+
+| Instruction | Count |
+|-------------|-------|
+| `rz`          | 1     |
+| `delay`       | 1     |
+| `sx`          | 2     |
+| `x`           | 2     |
+| `cx`          | 5     |
+| `cz`          | 5     |
+| `ecr`         | 5     |
+| `measure`     | 10    |
+| `reset`       | 17    |
+| `init`        | 50    |
+
+<Admonition type="note">
+  This table captures the heuristic used in validation and does not reflect the exact number of instructions used to implement an operation.
+</Admonition>
+
 <span id="2-qubit-limit"></span>
 ## Maximum number of single- and two-qubit gates per circuit
 
