Update import statements for generate_preset_pass_manager from qiskit.transpiler.preset_passmanagers to qiskit.transpiler

--- a/docs/guides/build-noise-models.ipynb
+++ b/docs/guides/build-noise-models.ipynb
@@ -55,7 +55,7 @@
     "from qiskit import QuantumCircuit\n",
     "from qiskit.quantum_info import Kraus, SuperOp\n",
     "from qiskit.visualization import plot_histogram\n",
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
     "from qiskit_aer import AerSimulator\n",
     "\n",
     "# Import from Qiskit Aer noise module\n",
