--- a/docs/guides/transpiler-stages.ipynb
+++ b/docs/guides/transpiler-stages.ipynb
@@ -132,7 +132,7 @@
     "import matplotlib.pyplot as plt\n",
     "from qiskit import QuantumCircuit\n",
     "from qiskit_ibm_runtime.fake_provider import FakeAuckland, FakeWashingtonV2\n",
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
     "\n",
     "backend = FakeAuckland()\n",
     "\n",
