--- a/docs/guides/fractional-gates.ipynb
+++ b/docs/guides/fractional-gates.ipynb
@@ -63,7 +63,7 @@
    "source": [
     "from qiskit import QuantumCircuit\n",
     "from qiskit.circuit import Parameter\n",
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
     "from qiskit.visualization.timeline import draw as draw_timeline, IQXSimple\n",
     "\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
@@ -282,7 +282,7 @@
    "source": [
     "from qiskit import QuantumCircuit\n",
     "from qiskit.circuit import Parameter\n",
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
     "\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
     "\n",
