--- a/docs/guides/function-template-hamiltonian-simulation.ipynb
+++ b/docs/guides/function-template-hamiltonian-simulation.ipynb
@@ -460,7 +460,7 @@
     "%%writefile --append ./source_files/template_hamiltonian_simulation.py\n",
     "\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
     "\n",
     "service = QiskitRuntimeService()\n",
     "backend = service.backend(backend_name)\n",
@@ -1347,7 +1347,7 @@
     "    final_circuit.compose(remainder_circuit, inplace=True)\n",
     "\n",
     "from qiskit_ibm_runtime import QiskitRuntimeService\n",
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
     "\n",
     "service = QiskitRuntimeService()\n",
     "backend = service.backend(backend_name)\n",
