--- a/docs/guides/represent-quantum-computers.ipynb
+++ b/docs/guides/represent-quantum-computers.ipynb
@@ -142,7 +142,7 @@
     }
    ],
    "source": [
-    "from qiskit.transpiler.preset_passmanagers import generate_preset_pass_manager\n",
+    "from qiskit.transpiler import generate_preset_pass_manager\n",
     "\n",
     "pass_manager = generate_preset_pass_manager(\n",
     "    optimization_level=1, target=target, seed_transpiler=12345\n",
