--- a/docs/migration-guides/external-providers-primitives-v2.mdx
+++ b/docs/migration-guides/external-providers-primitives-v2.mdx
@@ -9,7 +9,7 @@ description: Migrate to the primitives interface in external providers
 ## Why should third-party providers implement primitives?
 
 The Qiskit SDK is built to support third parties in creating external providers of quantum resources.
-The evolution of [user access patterns for QPUs](/migration-guides/qiskit-runtime#why-migrate-to-qiskit-runtime-primitives)
+The evolution of [user access patterns for QPUs](/guides/primitives#qpu-access-patterns)
 led to the Qiskit primitives (`Sampler` and `Estimator`) superseding the `backend.run` interface.
 To ensure Qiskit users can seamlessly transition between providers, all third-party providers should
 implement native support of the primitives for performant access to their hardware or simulators.
