fix qiskit 1.3 release notes

--- a/docs/api/qiskit/release-notes/1.3.mdx
+++ b/docs/api/qiskit/release-notes/1.3.mdx
@@ -767,7 +767,7 @@ $$
 
     (\*) Note that `Backend.target.operation_names` includes `basis_gates` and additional non-gate instructions, in some implementations it might be necessary to filter the output.
 
-    See [this guide](/api/qiskit/providers#migrating-from-backendv1-to-backendv2) for more information on migrating to the [`BackendV2`](/api/qiskit/1.3/qiskit.providers.BackendV2 "qiskit.providers.BackendV2") model.
+    See [this guide](/migration-guides/qiskit-backendv1-to-v2) for more information on migrating to the [`BackendV2`](/api/qiskit/1.3/qiskit.providers.BackendV2 "qiskit.providers.BackendV2") model.
 
 *   ## As part of the Qiskit Pulse package deprecation, all pulse-related functionality in [`qiskit.providers.BackendV2`](/api/qiskit/1.3/qiskit.providers.BackendV2 "qiskit.providers.BackendV2") class is being deprecated. This includes the following methods:
 
